--- a/style.css
+++ b/style.css
@@ -162,6 +162,7 @@ body{
             gap: 20px;
             margin-bottom:8rem;
             & > .img{  
+                position: relative;
                     height: 450px;
                     width: 250px;
                     cursor: pointer;
@@ -175,13 +176,27 @@ body{
                     line-height: 1.1;
                     
                 }
-            }
-            & .img:hover{
-               
-                & p{
-                    color: var(--Black);
+                & :hover::before{
+                    content: '';
+                    width: 100%;
+                    height: 100%;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    background-color: #999d99;
+                    mix-blend-mode: multiply;
+                    z-index: 3;
+                    opacity: 1;
                 }
+                
+                    & p{
+                        color: var(--White);
+                    }
+                
             }
+           
+        
+              
             & > .img:nth-child(1){
                 background-image: url('./images/desktop/image-deep-earth.jpg');
             }
@@ -210,7 +225,6 @@ body{
 
         }
     }
-
 
     & > footer{
         background-color: var(--Black);
@@ -313,7 +327,7 @@ body{
                         padding-top: 6rem;
                         gap: 1.2rem;
                         width: 100%;
-                        height: 90vh;
+                        height: 95vh;
                         background-color: var(--Black);           
                         position: absolute;
                         top: 5rem;
@@ -321,6 +335,7 @@ body{
                         text-transform: uppercase;
                         transition: .3s;
                         visibility: hidden;
+                        z-index: 3;
                 }
                 & > ul.active{
                     visibility: visible;
